[tool.poetry]
name = "Hydra"
version = "0.1.0"
description = "多平台信息采集"
authors = ["XueWeiHan <595666367@qq.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
sqlalchemy = "^1.3.22"
pymysql = "^1.0.2"
PyYaml = "^5.3.1"
requests-html = "^0.10.0"
schedule = "^1.0.0"
sentry-sdk = "^1.14.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"
pre-commit = "^2.9.3"
requests_mock = "^1.8.0"
mypy = "^0.812"
codacy-coverage = "^1.3.11"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

